--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "smoke-watch"
 version = "0.1.0"
-description = "Add your description here"
+description = "Air quality monitoring pipeline for MLOps portfolio"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -15,10 +15,19 @@ dependencies = [
     "ruff>=0.14.13",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "joblib>=1.3.2",
 ]
+
 [project.scripts]
 fetch-data = "data.fetch_data:main"
 check-quality = "data.check_quality:check_raw_data"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "requests-mock>=1.12.1",
+]
 
 [build-system]
 requires = ["setuptools>=68"]
@@ -29,6 +38,20 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
 [tool.ruff]
 line-length = 88
+target-version = "py312"
 select = ["E", "F", "I"]
+# Redirect ruff cache to a hidden folder to keep root clean
+cache-dir = ".cache/ruff"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+# Redirect pytest cache to a hidden folder
+cache_dir = ".cache/pytest"
+
+[tool.coverage.run]
+# Redirect coverage data
+data_file = ".cache/coverage/.coverage"
