Add nbconvert as a development dependency in pyproject.toml and uv.lock
- Updated pyproject.toml to include nbconvert version >=7.16.6 in dev-dependencies.
- Modified uv.lock to reflect the addition of nbconvert in the development dependencies section.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ check-quality = "data.check_quality:check_raw_data"
 
 [tool.uv]
 dev-dependencies = [
+    "nbconvert>=7.16.6",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "requests-mock>=1.12.1",
